# FlagsBase

./: CMakeLists.txt  Comparisons.cpp  Comparisons.hpp  ComparisonsTest.cpp  flags.cpp
.github/workflows/: Hello.yaml
testsuite/: CMakeLists.txt  testIsEven.cpp  testIsNegative.cpp  testIsNonNegative.cpp  testIsOdd.cpp  testIsPositive.cpp
